--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,72 @@
 .App-link {
   color: #61dafb;
 }
+li {
+  list-style: none;
+}
+
+p {
+  font-size: 18px;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+div.main-table {
+  margin-bottom: 10vh;
+}
+
+.header-table {
+  margin-bottom: 4vh;
+}
+
+table {
+  width: 50vw;
+  padding: 0 2vw;
+  margin: 0 auto ;
+}
+
+th {
+  font-size: 2rem;
+  font-weight: 700;
+  min-width: 15vw;
+  text-align: center;
+}
+
+td {
+  min-width: 15vw;
+  font-size: 2rem;
+  text-align: center;
+  border: 1px solid;
+  padding: 1.5vh 0vw 0.5vh;
+}
+
+img.profilepict {
+  width: 30%;
+  border-radius: 5px;
+}
+
+.section-bt {
+  padding: 2vh 2vw;
+  margin-bottom: 4vh;
+}
+
+.action-bt {
+  background-color: green;
+  padding: 1vh 1vw;
+  border-radius: 5px;
+  border: 1px black solid;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.action-bt:hover {
+  background-color: orangered;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
