--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,12 @@ div.main-table {
 
 .header-table {
   margin-bottom: 4vh;
+  background-color: #666;
+  color: white;
+  padding: 2vh 0vw;
+  border-radius: 5px;
 }
+
 
 table {
   width: 50vw;
@@ -54,7 +59,7 @@ table {
 }
 
 th {
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-weight: 700;
   min-width: 15vw;
   text-align: center;
@@ -62,10 +67,11 @@ th {
 
 td {
   min-width: 15vw;
-  font-size: 2rem;
+  font-size: 1.6rem;
   text-align: center;
   border: 1px solid;
   padding: 1.5vh 0vw 0.5vh;
+  border-radius: 5px;
 }
 
 img.profilepict {
